// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Free Business Check golden profiles > advisoryRouteBusiness keeps its pinned question flow, route, readiness and recommendations > advisoryRouteBusiness 1`] = `
{
  "candidateOfferings": [],
  "cleanedAnswers": {
    "p_age": "over10",
    "p_description": "A fictional business used to test the business check",
    "p_name": "Example Business",
    "p_revenue": "over25m",
    "p_sector": "manufacturing",
    "p_staff": "over50",
    "p_stage": "operating",
    "p_trend": "growing",
    "p_type": "mixed",
  },
  "outline": [],
  "primaryArea": null,
  "primaryGap": null,
  "questionFlow": [
    "profile:p_stage",
    "profile:p_name",
    "profile:p_age",
    "profile:p_type",
    "profile:p_sector",
    "profile:p_description",
    "profile:p_staff",
    "profile:p_revenue",
    "profile:p_trend",
  ],
  "readiness": "nascent",
  "result": {
    "founder": {
      "capacity": 0,
      "competence": 0,
      "exposure": 2,
      "instinct": undefined,
      "level": "nascent",
      "needsDriver": false,
      "score": 2,
      "seen": undefined,
    },
    "offerings": [],
    "outline": [],
    "primaryArea": undefined,
    "primaryGap": undefined,
    "route": "advisory",
    "summary": {
      "found": "Your business is at a scale where a short questionnaire would miss most of what matters.",
      "next": "Book the free call. We will come prepared with questions for a business of your size.",
      "think": "The right first step is a conversation with a senior adviser, who will look at the business as a whole.",
    },
  },
  "route": "advisory",
  "ruleFallback": {
    "source": "Rules",
    "summary": {
      "found": "Your business is at a scale where a short questionnaire would miss most of what matters.",
      "next": "Book the free call. We will come prepared with questions for a business of your size.",
      "offerings": [],
      "think": "The right first step is a conversation with a senior adviser, who will look at the business as a whole.",
    },
  },
}
`;

exports[`Free Business Check golden profiles > growingMaker keeps its pinned question flow, route, readiness and recommendations > growingMaker 1`] = `
{
  "candidateOfferings": [],
  "cleanedAnswers": {
    "f_education": "none",
    "f_finance": [
      "pl",
    ],
    "f_hours": "lt2",
    "f_instinct": "D",
    "f_seen": "D",
    "f_team": "solo",
    "f_tough": "me_easy",
    "p_age": "2to5",
    "p_description": "A fictional business used to test the business check",
    "p_name": "Example Business",
    "p_revenue": "3to5m",
    "p_sector": "food and drink",
    "p_staff": "6to10",
    "p_stage": "operating",
    "p_trend": "growing",
    "p_type": "maker",
    "pr_cost": "under500k",
    "pr_decider": "me",
    "pr_tried": "A fictional business used to test the business check",
    "s1_status": "clear",
    "s2_status": "clear",
    "s3_status": "clear",
    "s4_status": "clear",
    "s5_status": "clear",
    "s6_status": "clear",
    "s7_status": "clear",
    "s8_status": "clear",
  },
  "outline": [
    {
      "answer": "Nascent: build the founder before the business",
      "area": 0,
      "gap": "resources",
      "health": "stuck",
      "name": "Founder readiness",
    },
    {
      "answer": "I know where we're going in three years, and my week reflects it",
      "area": 1,
      "gap": undefined,
      "health": "clear",
      "name": "Strategic intent",
    },
    {
      "answer": "I know exactly who buys, why, and who I'm up against",
      "area": 2,
      "gap": undefined,
      "health": "clear",
      "name": "Market and industry",
    },
    {
      "answer": "Customers understand what we sell and buy it readily",
      "area": 3,
      "gap": undefined,
      "health": "clear",
      "name": "Service and offering",
    },
    {
      "answer": "I know which products or services make money, and our margins are healthy",
      "area": 4,
      "gap": undefined,
      "health": "clear",
      "name": "Business model",
    },
    {
      "answer": "Steadily, and I know where each new customer came from",
      "area": 5,
      "gap": undefined,
      "health": "clear",
      "name": "Market entry and sales",
    },
    {
      "answer": "The business runs well even when I'm not there",
      "area": 6,
      "gap": undefined,
      "health": "clear",
      "name": "Operations and people",
    },
    {
      "answer": "I know my numbers: margins, cash, and what's coming in next month",
      "area": 7,
      "gap": undefined,
      "health": "clear",
      "name": "Financials",
    },
    {
      "answer": "Our taxes, registrations and key risks are under control",
      "area": 8,
      "gap": undefined,
      "health": "clear",
      "name": "Risk and compliance",
    },
  ],
  "primaryArea": 0,
  "primaryGap": "resources",
  "questionFlow": [
    "profile:p_stage",
    "profile:p_name",
    "profile:p_age",
    "profile:p_type",
    "profile:p_sector",
    "profile:p_description",
    "profile:p_staff",
    "profile:p_revenue",
    "profile:p_trend",
    "founder:f_instinct",
    "founder:f_seen",
    "founder:f_team",
    "founder:f_tough",
    "founder:f_education",
    "founder:f_finance",
    "founder:f_hours",
    "intent:s1_status",
    "market:s2_status",
    "offer:s3_status",
    "model:s4_status",
    "sales:s5_status",
    "operations:s6_status",
    "finance:s7_status",
    "risk:s8_status",
    "problem:pr_tried",
    "problem:pr_cost",
    "problem:pr_decider",
  ],
  "readiness": "nascent",
  "result": {
    "founder": {
      "capacity": 0,
      "competence": 1,
      "exposure": 0,
      "instinct": "D",
      "level": "nascent",
      "needsDriver": false,
      "score": 1,
      "seen": "D",
    },
    "offerings": [],
    "outline": [
      {
        "answer": "Nascent: build the founder before the business",
        "area": 0,
        "gap": "resources",
        "health": "stuck",
        "name": "Founder readiness",
      },
      {
        "answer": "I know where we're going in three years, and my week reflects it",
        "area": 1,
        "gap": undefined,
        "health": "clear",
        "name": "Strategic intent",
      },
      {
        "answer": "I know exactly who buys, why, and who I'm up against",
        "area": 2,
        "gap": undefined,
        "health": "clear",
        "name": "Market and industry",
      },
      {
        "answer": "Customers understand what we sell and buy it readily",
        "area": 3,
        "gap": undefined,
        "health": "clear",
        "name": "Service and offering",
      },
      {
        "answer": "I know which products or services make money, and our margins are healthy",
        "area": 4,
        "gap": undefined,
        "health": "clear",
        "name": "Business model",
      },
      {
        "answer": "Steadily, and I know where each new customer came from",
        "area": 5,
        "gap": undefined,
        "health": "clear",
        "name": "Market entry and sales",
      },
      {
        "answer": "The business runs well even when I'm not there",
        "area": 6,
        "gap": undefined,
        "health": "clear",
        "name": "Operations and people",
      },
      {
        "answer": "I know my numbers: margins, cash, and what's coming in next month",
        "area": 7,
        "gap": undefined,
        "health": "clear",
        "name": "Financials",
      },
      {
        "answer": "Our taxes, registrations and key risks are under control",
        "area": 8,
        "gap": undefined,
        "health": "clear",
        "name": "Risk and compliance",
      },
    ],
    "primaryArea": {
      "answer": "Nascent: build the founder before the business",
      "area": 0,
      "gap": "resources",
      "health": "stuck",
      "name": "Founder readiness",
    },
    "primaryGap": "resources",
    "route": "programme",
    "summary": {
      "found": "Founder readiness reads as nascent. Under pressure you lead as a driver: you decide quickly and push for results. No area came out as stuck.",
      "next": "Book the free 20-minute call. We will tell you honestly whether we can help, and what to fix first.",
      "think": "The place to start is founder readiness, and the gap looks like resources: you know what to do and how, but lack the people, time or money to get it done.",
    },
  },
  "route": "programme",
  "ruleFallback": {
    "source": "Rules",
    "summary": {
      "found": "Founder readiness reads as nascent. Under pressure you lead as a driver: you decide quickly and push for results. No area came out as stuck.",
      "next": "Book the free 20-minute call. We will tell you honestly whether we can help, and what to fix first.",
      "offerings": [],
      "think": "The place to start is founder readiness, and the gap looks like resources: you know what to do and how, but lack the people, time or money to get it done.",
    },
  },
}
`;

exports[`Free Business Check golden profiles > ideaStageFounder keeps its pinned question flow, route, readiness and recommendations > ideaStageFounder 1`] = `
{
  "candidateOfferings": [],
  "cleanedAnswers": {
    "f_education": "degree",
    "f_finance": [
      "unit",
    ],
    "f_hours": "5plus",
    "f_instinct": "S",
    "f_seen": "S",
    "f_team": "team",
    "i_customer": "unclear",
    "i_need": "skills",
    "i_offer": "unsure",
    "i_tested": "no",
    "p_description": "A fictional business used to test the business check",
    "p_name": "Example Business",
    "p_sector": "services",
    "p_stage": "idea",
    "p_type": "expert",
  },
  "outline": [
    {
      "answer": "Advanced: ready to lead the next stage",
      "area": 0,
      "gap": undefined,
      "health": "clear",
      "name": "Founder readiness",
    },
    {
      "answer": "Not yet",
      "area": 1,
      "gap": "clarity",
      "health": "stuck",
      "name": "Strategic intent",
    },
  ],
  "primaryArea": 1,
  "primaryGap": "clarity",
  "questionFlow": [
    "profile:p_stage",
    "profile:p_name",
    "profile:p_type",
    "profile:p_sector",
    "profile:p_description",
    "founder:f_instinct",
    "founder:f_seen",
    "founder:f_team",
    "founder:f_education",
    "founder:f_finance",
    "founder:f_hours",
    "idea:i_customer",
    "idea:i_offer",
    "idea:i_tested",
    "idea:i_need",
  ],
  "readiness": "advanced",
  "result": {
    "founder": {
      "capacity": 2,
      "competence": 1,
      "exposure": 2,
      "instinct": "S",
      "level": "advanced",
      "needsDriver": false,
      "score": 5,
      "seen": "S",
    },
    "offerings": [],
    "outline": [
      {
        "answer": "Advanced: ready to lead the next stage",
        "area": 0,
        "gap": undefined,
        "health": "clear",
        "name": "Founder readiness",
      },
      {
        "answer": "Not yet",
        "area": 1,
        "gap": "clarity",
        "health": "stuck",
        "name": "Strategic intent",
      },
    ],
    "primaryArea": {
      "answer": "Not yet",
      "area": 1,
      "gap": "clarity",
      "health": "stuck",
      "name": "Strategic intent",
    },
    "primaryGap": "clarity",
    "route": "idea",
    "summary": {
      "found": "Founder readiness reads as advanced. Under pressure you lead as a steady hand: you keep things calm and people rely on you. On the idea itself, some basics are still open: who buys first, what you sell first, or whether anyone has paid yet.",
      "next": "Book the free call to agree a go or no-go test and a first-90-days plan.",
      "think": "The main gap is clarity: it isn't yet clear what is really wrong, or what good would look like. Before money is committed, test the idea and the founder together.",
    },
  },
  "route": "idea",
  "ruleFallback": {
    "source": "Rules",
    "summary": {
      "found": "Founder readiness reads as advanced. Under pressure you lead as a steady hand: you keep things calm and people rely on you. On the idea itself, some basics are still open: who buys first, what you sell first, or whether anyone has paid yet.",
      "next": "Book the free call to agree a go or no-go test and a first-90-days plan.",
      "offerings": [],
      "think": "The main gap is clarity: it isn't yet clear what is really wrong, or what good would look like. Before money is committed, test the idea and the founder together.",
    },
  },
}
`;

exports[`Free Business Check golden profiles > smallOperatingTrader keeps its pinned question flow, route, readiness and recommendations > smallOperatingTrader 1`] = `
{
  "candidateOfferings": [
    "embedded-support",
    "business-model",
    "financial-performance",
  ],
  "cleanedAnswers": {
    "f_education": "short",
    "f_finance": [
      "cash",
    ],
    "f_hours": "2to4",
    "f_instinct": "I",
    "f_seen": "I",
    "f_team": "cofounder",
    "p_age": "2to5",
    "p_description": "A fictional business used to test the business check",
    "p_name": "Example Business",
    "p_revenue": "1to3m",
    "p_sector": "retail",
    "p_staff": "1to2",
    "p_stage": "operating",
    "p_trend": "flat",
    "p_type": "trader",
    "pr_cost": "500kto2m",
    "pr_decider": "with_partner",
    "pr_tried": "A fictional business used to test the business check",
    "s1_detail": "partners_differ",
    "s1_status": "busy",
    "s2_detail": "competitors",
    "s2_status": "customers_only",
    "s3_detail": "why_us",
    "s3_status": "like_not_buy",
    "s4_detail": "concentration",
    "s4_status": "no_money",
    "s5_detail": "conversion",
    "s5_status": "inconsistent",
    "s6_detail": "decisions",
    "s6_status": "only_me",
    "s7_detail": "unit_cost",
    "s7_status": "tight_guess",
    "s8_detail": "key_person",
    "s8_status": "fragile",
  },
  "outline": [
    {
      "answer": "Intermediate: ready, with gaps to close",
      "area": 0,
      "gap": undefined,
      "health": "watch",
      "name": "Founder readiness",
    },
    {
      "answer": "I'm busy every day, but I'm not sure where this is going",
      "area": 1,
      "gap": "clarity",
      "health": "stuck",
      "name": "Strategic intent",
    },
    {
      "answer": "I know my customers, but little about competitors or the wider market",
      "area": 2,
      "gap": "knowhow",
      "health": "watch",
      "name": "Market and industry",
    },
    {
      "answer": "People like what we do, but they don't buy enough of it",
      "area": 3,
      "gap": "clarity",
      "health": "stuck",
      "name": "Service and offering",
    },
    {
      "answer": "Money comes in, but the business still doesn't make money",
      "area": 4,
      "gap": "clarity",
      "health": "stuck",
      "name": "Business model",
    },
    {
      "answer": "I don't know how to get customers consistently",
      "area": 5,
      "gap": "clarity",
      "health": "stuck",
      "name": "Market entry and sales",
    },
    {
      "answer": "Nothing moves unless I'm there",
      "area": 6,
      "gap": "knowhow",
      "health": "stuck",
      "name": "Operations and people",
    },
    {
      "answer": "Cash is always tight and my prices are guesses",
      "area": 7,
      "gap": "clarity",
      "health": "stuck",
      "name": "Financials",
    },
    {
      "answer": "One tax visit, one resignation or one bad month could end this",
      "area": 8,
      "gap": "clarity",
      "health": "stuck",
      "name": "Risk and compliance",
    },
  ],
  "primaryArea": 7,
  "primaryGap": "clarity",
  "questionFlow": [
    "profile:p_stage",
    "profile:p_name",
    "profile:p_age",
    "profile:p_type",
    "profile:p_sector",
    "profile:p_description",
    "profile:p_staff",
    "profile:p_revenue",
    "profile:p_trend",
    "founder:f_instinct",
    "founder:f_seen",
    "founder:f_team",
    "founder:f_education",
    "founder:f_finance",
    "founder:f_hours",
    "intent:s1_status",
    "intent:s1_detail",
    "market:s2_status",
    "market:s2_detail",
    "offer:s3_status",
    "offer:s3_detail",
    "model:s4_status",
    "model:s4_detail",
    "sales:s5_status",
    "sales:s5_detail",
    "operations:s6_status",
    "operations:s6_detail",
    "finance:s7_status",
    "finance:s7_detail",
    "risk:s8_status",
    "risk:s8_detail",
    "problem:pr_tried",
    "problem:pr_cost",
    "problem:pr_decider",
  ],
  "readiness": "intermediate",
  "result": {
    "founder": {
      "capacity": 2,
      "competence": 1,
      "exposure": 1,
      "instinct": "I",
      "level": "intermediate",
      "needsDriver": false,
      "score": 4,
      "seen": "I",
    },
    "offerings": [
      {
        "capability": "implementation",
        "id": "embedded-support",
        "name": "Embedded Performance Support",
        "signals": [
          "several connected priorities",
          "needs recurring support rather than a one-off project",
          "actions not sustained between meetings",
        ],
        "summary": "Ongoing support across several priorities when the business lacks the capacity to drive them alone.",
      },
      {
        "capability": "strategy-growth",
        "id": "business-model",
        "name": "Business Model & Commercial Strategy",
        "signals": [
          "a good product is not producing enough results",
          "revenue depends on one product, customer or channel",
          "pricing set without clear commercial logic",
          "needs more predictable revenue",
        ],
        "summary": "Fix who you serve, what you sell, how you price it and how the business makes money.",
      },
      {
        "capability": "finance-capital",
        "id": "financial-performance",
        "name": "Financial Performance & Decision Support",
        "signals": [
          "cash always tight",
          "prices are guesses",
          "true cost per product unknown",
          "records kept but not used for decisions",
          "customers pay late",
          "personal and business money mixed",
        ],
        "summary": "Know your margins, unit costs and cash, and use them to decide.",
      },
    ],
    "outline": [
      {
        "answer": "Intermediate: ready, with gaps to close",
        "area": 0,
        "gap": undefined,
        "health": "watch",
        "name": "Founder readiness",
      },
      {
        "answer": "I'm busy every day, but I'm not sure where this is going",
        "area": 1,
        "gap": "clarity",
        "health": "stuck",
        "name": "Strategic intent",
      },
      {
        "answer": "I know my customers, but little about competitors or the wider market",
        "area": 2,
        "gap": "knowhow",
        "health": "watch",
        "name": "Market and industry",
      },
      {
        "answer": "People like what we do, but they don't buy enough of it",
        "area": 3,
        "gap": "clarity",
        "health": "stuck",
        "name": "Service and offering",
      },
      {
        "answer": "Money comes in, but the business still doesn't make money",
        "area": 4,
        "gap": "clarity",
        "health": "stuck",
        "name": "Business model",
      },
      {
        "answer": "I don't know how to get customers consistently",
        "area": 5,
        "gap": "clarity",
        "health": "stuck",
        "name": "Market entry and sales",
      },
      {
        "answer": "Nothing moves unless I'm there",
        "area": 6,
        "gap": "knowhow",
        "health": "stuck",
        "name": "Operations and people",
      },
      {
        "answer": "Cash is always tight and my prices are guesses",
        "area": 7,
        "gap": "clarity",
        "health": "stuck",
        "name": "Financials",
      },
      {
        "answer": "One tax visit, one resignation or one bad month could end this",
        "area": 8,
        "gap": "clarity",
        "health": "stuck",
        "name": "Risk and compliance",
      },
    ],
    "primaryArea": {
      "answer": "Cash is always tight and my prices are guesses",
      "area": 7,
      "gap": "clarity",
      "health": "stuck",
      "name": "Financials",
    },
    "primaryGap": "clarity",
    "route": "programme",
    "summary": {
      "found": "Founder readiness reads as intermediate. Under pressure you lead as an influencer: you sell, persuade and rally people. You described 7 areas as stuck: Strategic intent, Service and offering, Business model, Market entry and sales, Operations and people, Financials, Risk and compliance. Market and industry needs watching.",
      "next": "Book the free 20-minute call. We will tell you honestly whether we can help, and what to fix first.",
      "think": "The place to start is financials, and the gap looks like clarity: it isn't yet clear what is really wrong, or what good would look like. That points to Embedded Performance Support, Business Model & Commercial Strategy, Financial Performance & Decision Support.",
    },
  },
  "route": "programme",
  "ruleFallback": {
    "source": "Rules",
    "summary": {
      "found": "Founder readiness reads as intermediate. Under pressure you lead as an influencer: you sell, persuade and rally people. You described 7 areas as stuck: Strategic intent, Service and offering, Business model, Market entry and sales, Operations and people, Financials, Risk and compliance. Market and industry needs watching.",
      "next": "Book the free 20-minute call. We will tell you honestly whether we can help, and what to fix first.",
      "offerings": [
        {
          "id": "embedded-support",
          "name": "Embedded Performance Support",
          "why": "Ongoing support across several priorities when the business lacks the capacity to drive them alone.",
        },
        {
          "id": "business-model",
          "name": "Business Model & Commercial Strategy",
          "why": "Fix who you serve, what you sell, how you price it and how the business makes money.",
        },
        {
          "id": "financial-performance",
          "name": "Financial Performance & Decision Support",
          "why": "Know your margins, unit costs and cash, and use them to decide.",
        },
      ],
      "think": "The place to start is financials, and the gap looks like clarity: it isn't yet clear what is really wrong, or what good would look like. That points to Embedded Performance Support, Business Model & Commercial Strategy, Financial Performance & Decision Support.",
    },
  },
}
`;

exports[`Free Business Check golden profiles > weakFounderReadiness keeps its pinned question flow, route, readiness and recommendations > weakFounderReadiness 1`] = `
{
  "candidateOfferings": [],
  "cleanedAnswers": {
    "f_education": "none",
    "f_finance": [
      "none",
    ],
    "f_hours": "lt2",
    "f_instinct": "S",
    "f_seen": "S",
    "f_team": "solo",
    "f_tough": "nobody",
    "p_age": "under2",
    "p_description": "A fictional business used to test the business check",
    "p_name": "Example Business",
    "p_revenue": "under1m",
    "p_sector": "retail",
    "p_staff": "1to2",
    "p_stage": "operating",
    "p_trend": "early",
    "p_type": "trader",
    "pr_cost": "under500k",
    "pr_decider": "me",
    "pr_tried": "A fictional business used to test the business check",
    "s1_status": "clear",
    "s2_status": "clear",
    "s3_status": "clear",
    "s4_status": "clear",
    "s5_status": "clear",
    "s6_status": "clear",
    "s7_status": "clear",
    "s8_status": "clear",
  },
  "outline": [
    {
      "answer": "Nascent: build the founder before the business",
      "area": 0,
      "gap": "knowhow",
      "health": "stuck",
      "name": "Founder readiness",
    },
    {
      "answer": "I know where we're going in three years, and my week reflects it",
      "area": 1,
      "gap": undefined,
      "health": "clear",
      "name": "Strategic intent",
    },
    {
      "answer": "I know exactly who buys, why, and who I'm up against",
      "area": 2,
      "gap": undefined,
      "health": "clear",
      "name": "Market and industry",
    },
    {
      "answer": "Customers understand what we sell and buy it readily",
      "area": 3,
      "gap": undefined,
      "health": "clear",
      "name": "Service and offering",
    },
    {
      "answer": "I know which products or services make money, and our margins are healthy",
      "area": 4,
      "gap": undefined,
      "health": "clear",
      "name": "Business model",
    },
    {
      "answer": "Steadily, and I know where each new customer came from",
      "area": 5,
      "gap": undefined,
      "health": "clear",
      "name": "Market entry and sales",
    },
    {
      "answer": "The business runs well even when I'm not there",
      "area": 6,
      "gap": undefined,
      "health": "clear",
      "name": "Operations and people",
    },
    {
      "answer": "I know my numbers: margins, cash, and what's coming in next month",
      "area": 7,
      "gap": undefined,
      "health": "clear",
      "name": "Financials",
    },
    {
      "answer": "Our taxes, registrations and key risks are under control",
      "area": 8,
      "gap": undefined,
      "health": "clear",
      "name": "Risk and compliance",
    },
  ],
  "primaryArea": 0,
  "primaryGap": "knowhow",
  "questionFlow": [
    "profile:p_stage",
    "profile:p_name",
    "profile:p_age",
    "profile:p_type",
    "profile:p_sector",
    "profile:p_description",
    "profile:p_staff",
    "profile:p_revenue",
    "profile:p_trend",
    "founder:f_instinct",
    "founder:f_seen",
    "founder:f_team",
    "founder:f_tough",
    "founder:f_education",
    "founder:f_finance",
    "founder:f_hours",
    "intent:s1_status",
    "market:s2_status",
    "offer:s3_status",
    "model:s4_status",
    "sales:s5_status",
    "operations:s6_status",
    "finance:s7_status",
    "risk:s8_status",
    "problem:pr_tried",
    "problem:pr_cost",
    "problem:pr_decider",
  ],
  "readiness": "nascent",
  "result": {
    "founder": {
      "capacity": 0,
      "competence": 0,
      "exposure": 0,
      "instinct": "S",
      "level": "nascent",
      "needsDriver": true,
      "score": 0,
      "seen": "S",
    },
    "offerings": [],
    "outline": [
      {
        "answer": "Nascent: build the founder before the business",
        "area": 0,
        "gap": "knowhow",
        "health": "stuck",
        "name": "Founder readiness",
      },
      {
        "answer": "I know where we're going in three years, and my week reflects it",
        "area": 1,
        "gap": undefined,
        "health": "clear",
        "name": "Strategic intent",
      },
      {
        "answer": "I know exactly who buys, why, and who I'm up against",
        "area": 2,
        "gap": undefined,
        "health": "clear",
        "name": "Market and industry",
      },
      {
        "answer": "Customers understand what we sell and buy it readily",
        "area": 3,
        "gap": undefined,
        "health": "clear",
        "name": "Service and offering",
      },
      {
        "answer": "I know which products or services make money, and our margins are healthy",
        "area": 4,
        "gap": undefined,
        "health": "clear",
        "name": "Business model",
      },
      {
        "answer": "Steadily, and I know where each new customer came from",
        "area": 5,
        "gap": undefined,
        "health": "clear",
        "name": "Market entry and sales",
      },
      {
        "answer": "The business runs well even when I'm not there",
        "area": 6,
        "gap": undefined,
        "health": "clear",
        "name": "Operations and people",
      },
      {
        "answer": "I know my numbers: margins, cash, and what's coming in next month",
        "area": 7,
        "gap": undefined,
        "health": "clear",
        "name": "Financials",
      },
      {
        "answer": "Our taxes, registrations and key risks are under control",
        "area": 8,
        "gap": undefined,
        "health": "clear",
        "name": "Risk and compliance",
      },
    ],
    "primaryArea": {
      "answer": "Nascent: build the founder before the business",
      "area": 0,
      "gap": "knowhow",
      "health": "stuck",
      "name": "Founder readiness",
    },
    "primaryGap": "knowhow",
    "route": "programme",
    "summary": {
      "found": "Founder readiness reads as nascent. Under pressure you lead as a steady hand: you keep things calm and people rely on you. Nobody in the business reliably makes the hard call yet; that role needs an owner. No area came out as stuck.",
      "next": "Book the free 20-minute call. We will tell you honestly whether we can help, and what to fix first.",
      "think": "The place to start is founder readiness, and the gap looks like know-how: you know what needs to happen, but not yet how to do it well.",
    },
  },
  "route": "programme",
  "ruleFallback": {
    "source": "Rules",
    "summary": {
      "found": "Founder readiness reads as nascent. Under pressure you lead as a steady hand: you keep things calm and people rely on you. Nobody in the business reliably makes the hard call yet; that role needs an owner. No area came out as stuck.",
      "next": "Book the free 20-minute call. We will tell you honestly whether we can help, and what to fix first.",
      "offerings": [],
      "think": "The place to start is founder readiness, and the gap looks like know-how: you know what needs to happen, but not yet how to do it well.",
    },
  },
}
`;
